# BlazorDX

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  BlazorDX.slnx  Build-Release.ps1  CHANGELOG.md  COMPONENTS.md  CONTRIBUTING.md  DesignDoc.txt  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Dockerfile  LICENSE  LICENSE.txt  README.md  REVIEW.md  ROADMAP.md  SECURITY.md  SUPPORT.md
.claude/workflows/: blazordx-teaching-platform.js  blazordx-teaching-platform.prompt.md
.github/: CONTRIBUTING.md  FUNDING.yml  SUPPORT.md
.github/workflows/: ci.yml  release.yml
analyzers/BlazorDX.Analyzers/: BlazorDX.Analyzers.csproj  DiagnosticDescriptors.cs  FileLengthAnalyzer.cs  RawHtmlAnalyzer.cs  SingletonStateAnalyzer.cs
deploy/: .env.example  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  COMPONENTS.md  REVIEW.md  ROADMAP.md  accessibility-screen-reader-checklist.md  ai-integration.md  powerbi-accessibility.md  reporting-accessibility.md  roadmap-documents-and-reporting.md
docs/adr/: 0001-two-tier-headless.md  0002-zero-reflection-source-generation.md  0003-rust-wasm-heavy-compute.md  0004-htmx-static-ssr-tier.md  0005-intercepted-unmounting-motion.md  0006-1000-line-file-cap.md  0007-security-baseline.md  0008-shared-primitive-engine.md  0009-source-generated-binding.md  0010-documents-and-reporting-integration.md  0011-speed-vs-size-rust-profile.md  0012-wcag-conformance-gate.md  0013-render-mode-selection.md  0014-layered-dx-api.md  0015-model-driven-editing-core.md  0016-zero-trust-ephemeral-chat-conduit.md
docs/background/: blazor-ecosystem-analysis.md
docs/blog/: from-0.2-to-0.4.4.md
docs/learn/: README.md  calendar.md  document-viewer.md  file-manager.md  scheduler.md
samples/BlazorDX.McpServer/: BlazorDX.McpServer.csproj  MeetingRequest.cs  Program.cs  README.md
samples/BlazorDX.MockReportServer/: BlazorDX.MockReportServer.csproj  MockPowerBiExtensions.cs  MockReportServerExtensions.cs  Program.cs  ReportCatalog.cs  ReportRenderer.cs  SsrsErrors.cs
samples/BlazorDX.MockSecureBroker/: README.md  package-lock.json  package.json  tsconfig.json
src/BlazorDX.Components/: BlazorDX.Components.csproj  ChartData.cs  ChartGradients.cs  ChartGraphData.cs  ChartTreeData.cs  DxAccordion.cs  DxAlert.cs  DxAreaChart.cs  DxAvatar.cs  DxBadge.cs  DxBarChart.cs  DxBarcode.cs  DxBoxPlot.cs  DxBreadcrumbs.cs  DxBubbleChart.cs  DxBulletChart.cs  DxButton.cs  DxButtonGroup.cs  DxCalendar.cs  DxCandlestickChart.cs  DxCard.cs  DxCarousel.cs  DxChat.cs  DxCheckbox.cs  DxChip.cs  DxChordDiagram.cs  DxColorPicker.cs  DxComboBox.cs  DxCommandPalette.cs  DxContextMenu.cs  DxDataGrid.cs  DxDatePicker.cs  DxDateRangePicker.cs  DxDialog.cs  DxDivider.cs  DxDocumentViewer.cs  DxDrawer.cs  DxEan13.cs  DxEditorialAuthorBio.cs  DxEditorialDissipation.cs  (+103 more)
src/BlazorDX.Compute/: BlazorDX.Compute.csproj  ComputeServiceCollectionExtensions.cs  GridAggregate.cs  IGridCompute.cs  ManagedGridCompute.cs  RustGridCompute.cs
src/BlazorDX.Compute.Rust/: Cargo.toml  README.md
src/BlazorDX.Compute.Rust/benches/: kernels.rs
src/BlazorDX.Compute.Rust/src/: chart.rs  grid.rs  lib.rs
src/BlazorDX.Conduit/: BlazorDX.Conduit.csproj  ConduitJson.cs  EphemeralEventsEndpoint.cs  EphemeralSessionRegistry.cs  IEphemeralSessionAuthorizer.cs  McpBrokerClient.cs  McpProxyEndpoint.cs  README.md
src/BlazorDX.Documents/: BlazorDX.Documents.csproj  DocxReader.cs  DxSpreadsheetViewer.Editing.cs  DxSpreadsheetViewer.Toolbar.cs  DxSpreadsheetViewer.cs  DxWordEditor.Find.cs  DxWordEditor.History.cs  DxWordEditor.Image.cs  DxWordEditor.Inline.cs  DxWordEditor.Lists.cs  DxWordEditor.Table.cs  DxWordEditor.cs  DxWordViewer.cs  SpreadsheetViewerPrimitive.cs
src/BlazorDX.Documents.Parsing/: BlazorDX.Documents.Parsing.csproj  DocxReader.Parts.cs  DocxReader.cs  DocxWriter.cs  LengthLimitingStream.cs  SpreadsheetModel.cs  WordHtml.Serialize.cs  WordHtml.Url.cs  WordHtml.cs  WordModel.cs  XlsxReader.cs  XlsxWorkbookWriter.cs
src/BlazorDX.Htmx/: BlazorDX.Htmx.csproj  DxHtmxDocumentViewer.cs  (+1 more)
src/BlazorDX.Security.Rust/: Cargo.toml  README.md
src/BlazorDX.Security.Rust/src/: lib.rs  session.rs
(+523 files in other folders)
