[package]
name = "dx_grid"
version = "0.1.0"
edition = "2021"
description = "BlazorDX heavy-compute kernels (sort/filter) compiled to wasm32."
license-file = "../../LICENSE.txt"

[lib]
# cdylib produces a standalone dx_grid.wasm with C-ABI exports, loaded as a
# sidecar module beside the .NET WASM runtime. No wasm-bindgen: the ABI is a
# handful of pointer/length functions the TypeScript bridge drives directly.
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"   # optimize for size; this ships to the browser
lto = true
panic = "abort"
codegen-units = 1
